--- a/MachineLearningModels/ReacWebApp/my-app/package.json
+++ b/MachineLearningModels/ReacWebApp/my-app/package.json
@@ -6,6 +6,9 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@nivo/bar": "^0.73.1",
+    "@nivo/bullet": "^0.73.0",
+    "@nivo/core": "^0.73.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
