--- a/MachineLearningModels/ReacWebApp/my-app/package.json
+++ b/MachineLearningModels/ReacWebApp/my-app/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "move C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/MachineLearningModels/ReacWebApp/my-app/build C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/MachineLearningModels/backend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
