--- a/MachineLearningModels/ReacWebApp/my-app/package.json
+++ b/MachineLearningModels/ReacWebApp/my-app/package.json
@@ -16,14 +16,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.0.10",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "move C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/MachineLearningModels/ReacWebApp/my-app/build C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/b",
+    "postbuild": "move C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/MachineLearningModels/ReacWebApp/my-app/build C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/ && copy C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/mlModel C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/MachineLearningModels/ReacWebApp/my-app/build C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/build/",
+    "movestatic": "move C:\\Users\\captain-blacc\\Documents\\FYP-Project\\DDosProject\\statics\\csvjson.json C:/Users/captain-blacc/Documents/FYP-Project/DDosProject/build/static/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
