--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ matplotlib==3.3.4
 numpy==1.20.1
 gunicorn==20.0.4
 skorch==0.10.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.9.0+cpu
